wip: Add POSIX DDD
TODO: Fix tests